--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "git-commit-msg-linter": "^4.2.1"
+  },
+  "dependencies": {
+    "typescript": "^4.8.4"
   }
 }
