--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.9",
-    "git-commit-msg-linter": "^4.2.1"
+    "@typescript-eslint/eslint-plugin": "^5.43.0",
+    "@typescript-eslint/parser": "^5.43.0",
+    "eslint": "^8.27.0",
+    "eslint-config-prettier": "^8.5.0",
+    "git-commit-msg-linter": "^4.2.1",
+    "prettier": "^2.7.1"
   },
   "dependencies": {
-    "typescript": "^4.8.4"
+    "typescript": "*"
   }
 }
