--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint . --no-error-on-unmatched-pattern"
   },
   "repository": "git@github.com:sinonsrt/clean-node-api.git",
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
@@ -16,7 +17,6 @@
     "eslint-config-prettier": "^8.5.0",
     "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.2",
-    "lint-staged": "^13.0.3",
     "prettier": "^2.7.1"
   },
   "dependencies": {
