--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --watch"
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:unit": "yarn test --watch -c ./jest-unit-config.js",
+    "test:integration": "yarn test --watch -c ./jest-integration-config.js",
+    "test:staged": "yarn test --findRelatedTests ./src",
+    "test:ci": "yarn test --coverage",
+    "test:verbose": "jest --passWithNoTests --runInBand"
   },
   "repository": "git@github.com:sinonsrt/clean-node-api.git",
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
