--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/validator": "^13.7.10",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -28,6 +29,7 @@
     "ts-jest": "^29.0.3"
   },
   "dependencies": {
-    "typescript": "*"
+    "typescript": "*",
+    "validator": "^13.7.0"
   }
 }
