--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/validator": "^13.7.10",
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
+    "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "eslint": "^8.27.0",
@@ -29,6 +30,7 @@
     "ts-jest": "^29.0.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "typescript": "*",
     "validator": "^13.7.0"
   }
