--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "Lucas Marchiori <sinonsrt@hotmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.5",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.3",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.9",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
@@ -31,6 +33,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "mongodb": "^4.13.0",
     "typescript": "*",
     "validator": "^13.7.0"
   }
