feat: ensure AccountMongoRepository return an account on success

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:unit": "yarn test --watch -c ./jest-unit-config.js",
     "test:integration": "yarn test --watch -c ./jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests ./src",
