--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "tsx watch src/main/server.ts",
     "prepare": "husky install",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:unit": "yarn test --watch -c ./jest-unit-config.js",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.5",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.16",
     "@types/jest": "^29.2.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.9",
@@ -29,12 +31,14 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3"
+    "ts-jest": "^29.0.3",
+    "tsx": "^3.12.2",
+    "typescript": "*"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^4.13.0",
-    "typescript": "*",
     "validator": "^13.7.0"
   }
 }
