--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsx watch src/main/server.ts",
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:unit": "yarn test --watch -c ./jest-unit-config.js",
     "test:integration": "yarn test --watch -c ./jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests ./src",
@@ -22,6 +22,7 @@
     "@types/jest": "^29.2.3",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.9",
+    "@types/supertest": "^2.0.12",
     "@types/validator": "^13.7.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
@@ -31,6 +32,7 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "tsx": "^3.12.2",
     "typescript": "*"
