--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "tsx watch src/main/server.ts",
     "prepare": "husky install",
-    "test": "jest --passWithNoTests --noStackTrace --runInBand",
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:unit": "yarn test --watch -c ./jest-unit-config.js",
     "test:integration": "yarn test --watch -c ./jest-integration-config.js",
     "test:staged": "yarn test --findRelatedTests ./src",
