--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.16",
     "@types/jest": "^29.2.3",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.9",
     "@types/supertest": "^2.0.12",
@@ -41,6 +42,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "validator": "^13.7.0"
   }
