--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.0",
   "main": "index.js",
   "scripts": {
-    "start": "tsx watch src/main/server.ts",
+    "start": "node dist/main/server.js",
+    "build": "rimraf ./dist && tsc --build",
+    "dev": "tsx watch src/main/server.ts",
     "prepare": "husky install",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:unit": "yarn test --watch -c ./jest-unit-config.js",
@@ -33,6 +35,7 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
+    "rimraf": "^4.4.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
     "tsx": "^3.12.2",
