--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "validator": "^13.7.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
